--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,9 +26,9 @@
 								<div class="top_bar_social">
 									<span class="top_bar_title social_title"><%= t".f" %></span>
 									<ul>
-										<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -107,9 +107,9 @@
 		<div class="menu_social">
 			<span class="menu_title"><%= t".f" %></span>
 			<ul>
-				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 			</ul>
 		</div>
 	</div>
