--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
-	<div class="home_background" style="background-image: url(assets/images/index_background.jpg);"></div>
+	<div class="home_background" style="background-image: url(https://www.upsieutoc.com/image/index-background.k3tD0b);"></div>
 	<div class="home_content">
 		<div class="container">
 			<div class="row">
