--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,7 +10,7 @@
 						<div class="footer_title"><%= t".s" %></div>
 						<form action="#" id="newsletter_form" class="newsletter_form">
 							<input type="email" class="newsletter_input" placeholder="Email" required="required">
-							<button class="newsletter_button"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+							<button class="newsletter_button"><i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></button>
 						</form>
 					</div>
 				</div>
@@ -22,7 +22,6 @@
 						<ul class="footer_list">
 							<li><a><%= t".a1" %></a></li>
 							<li><a><%= t".a2" %></a></li>
-							<li><a><%= t".a3" %></a></li>
 							<li><a><%= t".a4" %></a></li>
 							<li><a><%= t".a5" %></a></li>
 						</ul>
@@ -35,8 +34,6 @@
 					<ul class="footer_list">
 						<li><a><%= t".a7" %></a></li>
 						<li><a><%= t".a8" %></a></li>
-						<li><a><%= t".a10" %></a></li>
-						<li><a><%= t".a11" %></a></li>
 						<li><a><%= t".a12" %></a></li>
 					</ul>
 				</div>
@@ -65,11 +62,11 @@
 						<div class="cr_right ml-md-auto">
 							<div class="footer_phone"><span class="cr_title"><%= t".b" %></span><%= t".c" %></div>
 							<div class="footer_social">
-								<span class="cr_social_title"><%= t".w" %></span>
+								<span class="cr_social_title"><%= t".f" %></span>
 								<ul>
-									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 								</ul>
 							</div>
 						</div>
