--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,7 +53,7 @@
 						<nav class="main_nav_contaner">
 							<ul class="main_nav">
 								<li class="active"><a><%= t".h" %></a></li>
-								<li><a><%= t".w" %></a></li>
+								<li><a><%= link_to (t".w"), words_path %></a></li>
 							</ul>
 						</nav>
 						<div class="header_content_right ml-auto text-right">
