--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/animate.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/main_styles.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/responsive.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/courses.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/courses_responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
 
@@ -36,5 +38,6 @@
     <%= javascript_include_tag("owl.carousel.js") %>
     <%= javascript_include_tag("easing.js") %>
     <%= javascript_include_tag("custom.js") %>
+    <%= javascript_include_tag("courses.js") %>
   </body>
 </html>
