filter_by_categories

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,9 +54,9 @@
 							<ul class="main_nav">
 								<li><a><%= link_to (t".h"), root_path %></a></li>
 								<li><a><%= link_to (t".w"), words_path %></a></li>
-								<li><a><%= link_to (t".e"), categories_path %></a></li>
 								<li><a><%= link_to (t".o"), destroy_user_session_path, method: :delete %></a></li>
 								<li><a><%= link_to (t".t"), edit_user_registration_path %></a></li>
+								<li><a><%= link_to (t".c"), categories_path %></a></li>
 							</ul>
 						</nav>
 						<div class="header_content_right ml-auto text-right">
