--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -17,12 +17,19 @@
 	<div class="container">
 		<div class="row courses_row">
            <div class="col-lg-4 course_col">
-            <%= t".l" %>
+              <h3><%= t".l" %></h3></br>
 
-            <% @words.sort_by{|w| [:content]}.each do |word|%>
-              <%= word.content %>
-            <% end %>
-		   </div>
-		</div>
-	</div>
+              <%= form_with url: words_path, method: :get, include_blank: true do %>
+                <%= select_tag (t".f"), options_for_select([[(t".d")], [(t".al")], [(t".c")]]),
+                onchange: "this.form.submit()" %>
+              <% end %>
+
+              <% if params[:filter_form] == (t".c") %>
+                <%= render "words/filter_by_categories" %>
+              <% else %>
+                <%= render "words/filter_by_alphabet" %>
+              <% end %>
+            </div>
+        </div>
+    </div>
 </div>
