--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,35 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="row register">
+  <div class="col-lg-6 offset-lg-3"></br></br>
+    <div class="register_form_title">Edit <%= resource_name.to_s.humanize %></div>
+    <div class="register_form_container">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="row register_row">
+          <div class="col-lg-12 register_col">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form_input", placeholder: "Email" %>
+          </div>
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+          <div class="col-lg-12 register_col">
+            <%= f.password_field :password, autocomplete: "new-password", class: "form_input", placeholder: "Password (6 characters minimum, leave blank if you don't want to change it)" %>
+          </div>
+          <div class="col-lg-12 register_col">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form_input", placeholder: "Password confirmation" %>
+          </div>
+          <div class="col-lg-12 register_col">
+            <%= f.password_field :current_password, autocomplete: "current-password", class: "form_input", placeholder: "we need your current password to confirm your changes" %>
+          </div>
+          <div class="col">
+            <%= f.submit "Update", class: "form_button trans_200" %>
+          </div>
+        </div>
+      <% end %>
+      <h3>Cancel my account</h3>
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+      <%= link_to "Back", :back %>
+      </br>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
