--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,6 +55,8 @@
 								<li><a><%= link_to (t".h"), root_path %></a></li>
 								<li><a><%= link_to (t".w"), words_path %></a></li>
 								<li><a><%= link_to (t".e"), categories_path %></a></li>
+								<li><a><%= link_to (t".o"), destroy_user_session_path, method: :delete %></a></li>
+								<li><a><%= link_to (t".t"), edit_user_registration_path %></a></li>
 							</ul>
 						</nav>
 						<div class="header_content_right ml-auto text-right">
