--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="col-lg-6 offset-lg-3"></br></br>
     <div class="register_form_title">Edit <%= resource_name.to_s.humanize %></div>
     <div class="register_form_container">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: :true }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="row register_row">
           <div class="col-lg-12 register_col">
@@ -16,6 +16,16 @@
           </div>
           <div class="col-lg-12 register_col">
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form_input", placeholder: "Password confirmation" %>
+          </div>
+          <div>
+            <% if current_user.avatar.url.present? %>
+            <%= image_tag(current_user.avatar.url) %>
+              <%= f.label :remove_avatar do %>
+                <%= f.check_box :remove_avatar %>
+              <% end %>
+            <% end %>
+            <%= f.file_field :avatar %>
+            <%= f.hidden_field :avatar_cache %>
           </div>
           <div class="col-lg-12 register_col">
             <%= f.password_field :current_password, autocomplete: "current-password", class: "form_input", placeholder: "we need your current password to confirm your changes" %>
