--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-lg-6 offset-lg-3">
     <div class="register_form_title">Sign Up</div>
     <div class="register_form_container">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: :true }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="row register_row">
           <div class="col-lg-12 register_col">
@@ -13,6 +13,12 @@
           </div>
           <div class="col-lg-12 register_col">
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form_input", placeholder: "Password confirmation" %>
+          </div>
+          <div>
+            <%= f.label :avatar do %>
+              <%= f.file_field :avatar %>
+              <%= f.hidden_field :avatar_cache %>
+            <% end %>
           </div>
           <div class="col">
             <%= f.submit "Sign Up", class: "form_button trans_200" %>
