--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,6 +58,7 @@
 								<li><a><%= link_to (t".a"), categories_path %></a></li>
 								<li><a><%= link_to (t".t"), edit_user_registration_path %></a></li>
 								<li><a><%= link_to (t".u"), users_path %></a></li>
+								<li><a><%= link_to (t".l"), lessons_path %></a></li>
 							</ul>
 						</nav>
 						<div class="header_content_right ml-auto text-right">
@@ -108,6 +109,7 @@
 			<li class="menu_mm"><a><%= link_to (t".o"), destroy_user_session_path, method: :delete %></a></li>
 			<li class="menu_mm"><a><%= link_to (t".t"), edit_user_registration_path %>
 			<li class="menu_mm"><a><%= link_to (t".u"), users_path %>
+			<li class="menu_mm"><a><%= link_to (t".l"), lessons_path %>	
 		</ul>
 	</nav>
 	<div class="menu_extra">
