--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -55,7 +55,7 @@
                     <% if lesson.mark.blank? %>
                       <!--- Button Redirect To Do The Test ( The First Show ) !--->
                     <% elsif lesson.score.present? %>
-                      <!--- Button Redirect To View The Test ( The Second Show ) !--->
+                      <%= link_to (t".completed"), lesson_path(lesson), class: "btn-success btn-lg" %>
                     <%end%>
                   </td>
                 </tr>
